Changes for 1.3.4:

 - fixed warning when enabling/disabling action (Alexei)
 - added support of avg() for items having integer type (Alexei)
 - added user group for database down messages (Alexei/Eugene)
 - removed support of action repeats (Alexei)
 - fixed upgrade of rights,sysmaps,sysmaps_elements (Alexei)
 - fixed initial creation of user rights in data.sql (Alexei)
 - fixes of PostgreSQL compile (Alexei)
 - added icons for elements of map having Unknown status (Eugene)
 - added installation check for 'BC math' (Eugene)
 - added actions.evaltype (Alexei)
 - added support of all AND, all OR and AND/OR action conditions (Alexei/Eugene)
 - fixed processing of Text items (Alexei)
 - NetBSD compilation fixes (Alexei)

Changes for 1.3.3:

 - support of hysteresis (Alexei)
 - support of macro {TRIGGER.VALUE} in trigger expressions (Alexei)
 - added new table 'ids' which will store last IDs for all tables (Alexei)
 - added highlighting for second level menu (Eugene)
 - added "Clone" functionality (Eugene)
 - added Watchdog for database availability (Alexei)
 - developed configuration of Jabber messaging (Eugene)
 - split hostname and DNS name in frontend (Eugene)
 - improved detection of runned ZABBIX applications (Eugene)
 - fixed large SQLs calling (Eugene)
 - new templates Unix_t, Windows_t, Standalone_t (Alexei)
 - added media_type.username, media_type.passwd (Alexei)
 - added hosts.dns. Host name is for informational purposes only. (Alexei)
 - new command line parameters for zabbix_sender (Andrey)
 - added support of system.boottime (Andrey)
 - fixed permissions for triggers (Eugene)
 - developed 'mass update' functionality for items (Eugene)
 - changed type of items.prevorgvalue to preserve data precision (Alexei)
 - added possibility of hostname using (Eugene)
 - new communication library and protocol (Alexei)
 - developed configuration interface of http monitoring (Eugene)
 - added support of 'eventlog[*]' for WinXX (Eugene)