@@ -1,5 +1,6 @@
 Changes for 1.3.4:
 
+ - HTTP poller won't verify SSL certificates to enable self-signed (Alexei)
  - fixed warning when enabling/disabling action (Alexei)
  - added support of avg() for items having integer type (Alexei)
  - added user group for database down messages (Alexei/Eugene)
